refactroring structure project

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@notionhq/client": "^2.2.13",
     "axios": "^1.5.1",
     "config": "^3.3.9",
+    "dotenv": "^16.3.1",
     "telegraf": "^4.14.0"
   }
 }
