Revert .gitignore changes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parser_price_steam_inventory",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "scripts": {
     "start": "node ./src/main.js",
